[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/eagle/eagle-attack-4.png" type="Texture" id=1]
[ext_resource path="res://sprites/eagle/eagle-attack-3.png" type="Texture" id=2]
[ext_resource path="res://sprites/eagle/eagle-attack-1.png" type="Texture" id=3]
[ext_resource path="res://sprites/eagle/eagle-attack-2.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Eagle.gd" type="Script" id=5]
[ext_resource path="res://sprites/enemy-death/enemy-death-4.png" type="Texture" id=6]
[ext_resource path="res://sprites/enemy-death/enemy-death-2.png" type="Texture" id=7]
[ext_resource path="res://sprites/enemy-death/enemy-death-5.png" type="Texture" id=8]
[ext_resource path="res://sprites/enemy-death/enemy-death-6.png" type="Texture" id=9]
[ext_resource path="res://sprites/enemy-death/enemy-death-3.png" type="Texture" id=10]
[ext_resource path="res://sprites/enemy-death/enemy-death-1.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 187.771

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 10 )

[node name="Eagle" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -3, 5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Fly"

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 3 )

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2( -1, 8 )
shape = SubResource( 4 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
[connection signal="area_entered" from="Death" to="." method="_on_Death_area_entered"]
[connection signal="body_entered" from="Death" to="." method="_on_Death_body_entered"]
